build-pod.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: docker
    image:  docker:latest  # docker:19.03.1
    command:
    - sleep
    args:
    - 99d
  - name: docker-daemon
    image: docker:20.10.9-dind-alpine3.14  # docker:19.03.1-dind
    securityContext:
      privileged: true
  - name: google-cloud-sdk-alpine
    image:  google/cloud-sdk:alpine  
    command:
    - sleep
    args:
    - 99d
