app-1-nginx.yaml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata: 
    name: app1-nodeport-service
spec:
    selector: 
         app: nginx
    type: NodePort
    ports: 
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30003
      protocol: TCP
