app-1-service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: app1-nodeport-service
spec:
    selector: 
         app: nginx
    type: NodePort
    ports: 
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30003
      protocol: TCP
